k8s-manifests/authoring/authoring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authoring-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authoring
  template:
    metadata:
      labels:
        app: authoring
    spec:
      volumes:
        - name: ssh-keys
          secret:
            secretName: ssh-keys
        - name: data
          persistentVolumeClaim:
            claimName: authoring-data-pv-claim
        - name: logs
          emptyDir: {}
        - name: temp
          emptyDir: {}
      containers:
        - name: tomcat
          image: craftercms/authoring_tomcat:3.1.5
          imagePullPolicy: 'Always'
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: ssh-keys
              mountPath: /opt/crafter/.ssh
            - name: data
              mountPath: /opt/crafter/data
            - name: temp
              mountPath: /opt/crafter/temp
            - name: logs
              mountPath: /opt/crafter/logs
        - name: deployer
          image: craftercms/deployer:3.1.5
          imagePullPolicy: 'Always'
          ports:
            - containerPort: 9191
          volumeMounts:
            - name: ssh-keys
              mountPath: /opt/crafter/.ssh
            - name: data
              mountPath: /opt/crafter/data
            - name: temp
              mountPath: /opt/crafter/temp
            - name: logs
              mountPath: /opt/crafter/logs
        - name: git-ssh-server
          image: craftercms/git_ssh_server:3.1.5
          imagePullPolicy: 'Always'
          ports:
            - containerPort: 22
          volumeMounts:
            - name: ssh-keys
              mountPath: /opt/crafter/.ssh
            - name: data
              mountPath: /opt/crafter/data
