k8s-manifests/authoring/authoring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authoring-service
spec:
  type: NodePort
  selector:
    app: authoring
  ports:
    - port: 80
      targetPort: 8080
