k8s-manifests/authoring/authoring-ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authoring-ssh-service
spec:
  type: ClusterIP
  selector:
    app: authoring
  ports:
  - port: 22
    targetPort: 22
